Fix run results
